--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
  [submodule "tsf-hd-ohio"]
-    path = tsf-hd-ohio
-    url = https://github.com/example/tsf-hd-ohio.git
+	path = tsf-hd-ohio
+	url = git@github.com:git@github.com:tsf-hd-ohio.git
