--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
  [submodule "tsf-hd-ohio"]
 	path = tsf-hd-ohio
-	url = git@github.com:tsf-hd-ohio.git
+	url = git@github.com:cgxxcg/tsf-hd-ohio.git
